fix: wp gutenberd layout bugs

--- a/src/pages/page-numerology/page-numerology.scss
+++ b/src/pages/page-numerology/page-numerology.scss
@@ -67,9 +67,9 @@ body {
 		display: none;
 	}
 
-	video {
-		height: 300px;
-	}
+	//video {
+	//	height: 300px;
+	//}
 }
 
 @media screen and (max-width: 600px) {
