--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,113 +22,6 @@ body {
 	background: $-c2;
 }
 
-.figure_no-caption {
-	figcaption::after {
-		height: 100%;
-	}
-}
-
-figure {
-	width: 100%;
-	overflow: hidden;
-	margin: 0;
-	padding: 0;
-	position: relative;
-
-	$height: 68;
-
-	>*:first-child {
-		transition: height 1s ease;
-	}
-
-	&::after {
-		content: '⊕';
-		transition: opacity 1s ease, line-height 1s ease;
-		opacity: 0;
-		color: $-c1;
-		font-size: 2.25em;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		margin-top: -0.25rem;
-		text-shadow: 0 0 10px $-c6-50;
-		text-align: center;
-		line-height: 100%;
-	}
-
-	&:not(.figure_opened) {
-		>*:first-child {
-			height: px_to_em($height);
-		}
-
-		&::after {
-			cursor: pointer;
-			line-height: px_to_rem($height);
-			opacity: 1;
-		}
-	}
-
-	&.figure_opened {
-		>*:first-child {
-			height: 100%;
-		}
-	}
-
-	img {
-		width: 100%;
-		//height: $image-height
-		object-fit: cover;
-		object-position: center;
-		border-radius: px_to_em(5);
-	}
-}
-
-figcaption {
-	font-size: px_to_em(14);
-	color: #c4c4c4;
-
-	&::after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		//height: $image-height
-		height: calc(100% - 1.1em);
-		border-radius: px_to_em(5);
-		background: $-c2-25;
-	}
-}
-
-$tippy-color: $-c2;
-
-.tippy-box {
-	&[data-theme~=light] {
-		&[data-placement^=top] {
-			.tippy-arrow {
-				&::before {
-					border-top-color: $tippy-color;
-				}
-			}
-		}
-
-		&[data-placement^=bottom] {
-			.tippy-arrow {
-				&::before {
-					border-bottom-color: $tippy-color;
-				}
-			}
-		}
-
-		.tippy-content {
-			background-color: $tippy-color;
-		}
-	}
-}
-
 // Text editor . scss
 [data-json] {
 	a:link,
